# seed-rest-api

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
.github/: dependabot.yml
.github/workflows/: test.yml
src/: lib.rs
tests/: test.mjs
