[package]
name = "seed-rest-api"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.188"
worker = "0.0.18"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

[profile.release]
lto = true
strip = true
codegen-units = 1
